# Dixter

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  app.qrc
CMake/: CMakeUtils.cmake  FindLog4cxx.cmake  armadillo.cmake  boost.cmake  cppconnector.cmake  cpprest.cmake  cudnn.cmake  speech_dispatcher.cmake
Data/: botchan.txt  ru-ru.txt  scripts.txt
Data/wiki/: cyrus_the_great_peo.txt  isaac_newton_az.txt  isaac_newton_de.txt  isaac_newton_eo.txt  isaac_newton_fr.txt  isaac_newton_is.txt  isaac_newton_no.txt  isaac_newton_ru.txt
Resources/: languages.json  languages.xml  settings.ini  settings.xml  voices.xml
Source/: CMakeLists.txt  Commons.cpp  Commons.hpp  Configuration.cpp  Configuration.hpp  Constants.hpp  Exception.cpp  Exception.hpp  Group.hpp  GroupElement.hpp  GroupImpl.hpp  JoinThread.cpp  JoinThread.hpp  Macros.hpp  MethodCallback.hpp  Node.cpp  Node.hpp  NodeData.cpp  NodeData.hpp  NodeEntry.cpp  NodeEntry.hpp  Randomizer.hpp  SettingsController.cpp  SettingsController.hpp  SmartPointers.hpp  StringView.hpp  Types.hpp  Unicode.hpp  UnicodeString.cpp  UnicodeString.hpp  UnicodeStringWrapper.cpp  UnicodeStringWrapper.hpp  Utilities.cpp  Utilities.hpp  setup.h
Source/Database/: Manager.cpp  Manager.hpp  QueryBuilder.cpp  QueryBuilder.hpp  Table.cpp  Table.hpp  Value.cpp  Value.hpp
Source/Gui/: Application.cpp  Application.hpp  Button.cpp  Button.hpp  CMakeLists.txt  ColourPicker.cpp  ColourPicker.hpp  DictionaryPanel.cpp  DictionaryPanel.hpp  FontPicker.cpp  FontPicker.hpp  Label.cpp  Label.hpp  MainWindow.cpp  MainWindow.hpp  Notebook.cpp  Notebook.hpp  OptionBox.cpp  OptionBox.hpp  Panel.cpp  Panel.hpp  SearchEntry.cpp  SearchEntry.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TextArea.cpp  TextArea.hpp  TextEdit.cpp  TextEdit.hpp  TextEntry.cpp  TextEntry.hpp  TextList.cpp  TextList.hpp  TextView.cpp  TextView.hpp  TranslatorPanel.cpp  TranslatorPanel.hpp  Window.cpp  Window.hpp  WindowBase.cpp  (+1 more)
Source/OpenTranslate/: Alphabet.cpp  Alphabet.hpp  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  LanguageBook.cpp  LanguageBook.hpp  SentenceAnalyzer.cpp  SentenceAnalyzer.hpp  Tokenizer.cpp  Tokenizer.hpp
Test/: CMakeLists.txt  Dixter.cpp
Test/CvTranslate/: CMakeLists.txt  cvtr_test.cpp
Test/Gui/: CMakeLists.txt  DixterGui.cpp
Test/OpenTranslate/: CMakeLists.txt  DixterOt.cpp
Test/SpeechSynthesizer/: CMakeLists.txt  DixterVSynth.cpp  speech_synthesizer.cpp
